navbar.css
/*====Fonts====*/

@font-face {
    font-family: 'DIN Alternate Bold';
    font-style: normal;
    font-weight: normal;
    src: local('DIN Alternate Bold'), url('DINAlternate-Bold.ttf') format('truetype');
}

@font-face {
    font-family: 'Avenir Next';
    font-style: normal;
    font-weight: normal;
    src: local('Avenir Next'), url('AvenirNextLTPro-Regular.otf') format('opentype');
}

/*====Base Styles====*/
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    /*cursor: none;*/
}

body {
    background-color: white;
    display: flex;
    margin: 1.5rem;
}

ul {
    list-style: none;
}

a {
    text-decoration: none;
}

img {
    width: 100%;
}

/*====Highlight & Cursor====*/
::-moz-selection {
    background: #FFCE22;
}

::selection {
    background: #FFCE22;
}

/* .cursor {
    position: fixed;
    width: 30px;
    height: 30px;
    margin-left: -20px;
    margin-top: -20px;
    border-radius: 50%;
    border: 2px solid black;
    background-color: #F5F5F5;
    pointer-events: none;
    z-index: 1000;
    display: flex;
    align-items: center;
    justify-content: center;
}

.cursor .cursor-dot {
    height: 5px;
    width: 5px;
    border-radius: 50%;
    background-color: black;

} */

/*====Date and Time====*/
.date-item {
    background-color: #F5F5F5;
    padding: 1rem 2rem;
    margin: 1rem 1.5rem 1rem 0;
    border-radius: 10.5px;
    font-family: 'Avenir Next';
    font-size: 1rem;
}

.date-item-top .date-txt {
    display: flex;
    align-items: center;
}

.date-item-top .date-txt i {
    margin-right: 0.6rem;
}

.date-item-bottom {
    height: auto;
    background-color: white;
    border-radius: 10.5px;
    margin-top: 1rem;
    margin-bottom: 0.6rem;
    padding: 1rem 2rem;
}

.date-item-bottom .date-time {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.date-item-bottom .date-time .time {
    font-size: 1.4rem;
    color: #353535;
}

.date-item-bottom .date-time .date {
    font-size: 1rem;
    color: #353535;
    white-space: nowrap;
}


/*====Loading Screen====*/
.loading-screen {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: black;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    z-index: 1000;
    transition: opacity 0.3s ease, visibility 0.3s ease;
}

.loading-screen h2 {
    color: #F5F5F5;
}

.loading-screen .loader {
    position: relative;
    height: 2px;
    width: 22%;
    margin-top: 1.4rem;
    background-color: gray;
}


.loading-screen .loader .loader-line {
    position: absolute;
    top: 0;
    left: 0;
    width: 0;
    height: 100%;
    background-color:  #D2D7DC;
    animation: loader-animation 3s 0.6s forwards;
}

@keyframes loader-animation {
    0% {
        width: 0;
        left: 50%;
    }
    50% {
        width: 100%;
        left: 0;
    }
    100% {
        width: 100%;
        left: 0;
    }
}

.loader-screen-hidden {
    opacity: 0;
    visibility: hidden;
}

/*====Nav Bar====*/
nav {
    width: 25%;
    margin-top: 7.5rem;
}

nav .intro-txt {
    margin-bottom: 3rem;
}

nav .intro-txt h1 {
    font-family: 'DIN Alternate Bold';
    font-size: 2rem;
}

nav .intro-txt p {
    font-family: 'Avenir Next';
    font-size: 1rem;
}


nav .nav-item {
    position: relative;
    cursor: pointer;
    overflow: hidden;
    z-index: 2;
    background-color: #F5F5F5;
    padding: 1rem 2rem;
    margin: 1rem 1.5rem 1rem 0;
    border-radius: 10.5px;
    font-family: 'Avenir Next';
    font-size: 1rem;
    transition: background-color 0.2s ease-in-out;
}

nav .nav-item a {
    color: #A9A9AB;
    transition: color 0.2s ease-in-out;
    display: flex;
    align-items: center;
}

nav .nav-item:hover span, nav ul li:hover i{
    color: white;
}



nav .nav-item a i {
    padding-right: 0.6rem;
}

nav .nav-item .btn-animate {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: black;
    color: white;
    z-index: -1;
    transform: translateY(100%);
    transition: transform 0.4s cubic-bezier(0.19, 1, 0.22, 1);
}

nav .nav-item:hover .btn-animate {
    transform: translateY(0);
}


nav .nav-item.active {
    background-color: black;
    padding: 1rem 2rem;
    margin: 1rem 1.5rem 1rem 0;
    border-radius: 10.5px;
}

nav .nav-item.active a {
    color: white;
}

.bar {
    height: 0.2rem;
    margin-right: 1.5rem;
    background-color: #F5F5F5;
    margin-top: 3rem;
}


/*====Nav Bar Section Content====*/
#content {
    height: 94dvh;
    width: 75%;
    border-radius: 45px;
    background-color: #F5F5F5;
    display: flex;
    justify-content: center;
    align-items: center;
    position: relative;
}

#overview-content, #projects-content, #forums-content {
    display: none;

}

.open {
    display: block !important;
}


/*===Projects Page===*/



#projects-content {
    background-color: white;
    border-radius: 30px 30px 30px 30px;
    width: 94%;
    height: 90%;
}

